// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Login with signup disabled > matches snapshot in en 1`] = `
<div
  class="page auth login"
>
  <h1>
    Login 
    <!---->
  </h1>
  <div
    class="toolbar"
  >
    
    
  </div>
  <main>
    
    <!--v-if-->
    
    
    <form
      novalidate=""
    >
      <div
        class="field email"
        placeholder="john.doe@example.com"
      >
        <label
          for="email"
        >
          Your email
        </label>
        
        <input
          class=""
          name="email"
          tabindex="0"
          type="email"
        />
        <!---->
        
      </div>
      <div
        class="field password"
      >
        <label
          for="password"
        >
          Your password
        </label>
        
        <input
          class=""
          name="password"
          tabindex="0"
          type="password"
        />
        <!---->
        
      </div>
      <div
        class="actions"
      >
        <button
          class="loading-button"
          data-v-3fdbc7b3=""
          tabindex="0"
        >
          <div
            class="label"
            data-v-3fdbc7b3=""
          >
            <span
              data-v-3fdbc7b3=""
            >
              Sign in
            </span>
          </div>
          <!---->
        </button>
      </div>
    </form>
    <button
      class="loading-button"
      data-v-3fdbc7b3=""
      data-v-bc566a6c=""
    >
      <div
        class="label"
        data-v-3fdbc7b3=""
      >
        <span
          data-v-3fdbc7b3=""
        >
          Continue with Google
        </span>
      </div>
      <!---->
    </button>
    <div
      class="links"
    >
      <!--v-if-->
      <a
        class="reset"
      >
        Forgot password
      </a>
    </div>
    
  </main>
</div>
`;

exports[`Login with signup disabled > matches snapshot in fr 1`] = `
<div
  class="page auth login"
>
  <h1>
    Connexion 
    <!---->
  </h1>
  <div
    class="toolbar"
  >
    
    
  </div>
  <main>
    
    <!--v-if-->
    
    
    <form
      novalidate=""
    >
      <div
        class="field email"
        placeholder="john.doe@example.com"
      >
        <label
          for="email"
        >
          Votre adresse courriel
        </label>
        
        <input
          class=""
          name="email"
          tabindex="0"
          type="email"
        />
        <!---->
        
      </div>
      <div
        class="field password"
      >
        <label
          for="password"
        >
          Votre mot de passe
        </label>
        
        <input
          class=""
          name="password"
          tabindex="0"
          type="password"
        />
        <!---->
        
      </div>
      <div
        class="actions"
      >
        <button
          class="loading-button"
          data-v-3fdbc7b3=""
          tabindex="0"
        >
          <div
            class="label"
            data-v-3fdbc7b3=""
          >
            <span
              data-v-3fdbc7b3=""
            >
              Connexion
            </span>
          </div>
          <!---->
        </button>
      </div>
    </form>
    <button
      class="loading-button"
      data-v-3fdbc7b3=""
      data-v-bc566a6c=""
    >
      <div
        class="label"
        data-v-3fdbc7b3=""
      >
        <span
          data-v-3fdbc7b3=""
        >
          Continue with Google
        </span>
      </div>
      <!---->
    </button>
    <div
      class="links"
    >
      <!--v-if-->
      <a
        class="reset"
      >
        Mot de passe oublié
      </a>
    </div>
    
  </main>
</div>
`;
